# DMK-MC

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
accuracy/: dmk_force_accuracy.cpp
data/: genoa_backend_bench_1e5_200.csv  genoa_backend_bench_1e5_200_r10.csv  genoa_backend_bench_double.csv  genoa_backend_bench_stable.csv
docs/plans/: 2026-03-16-agents-guide-design.md  2026-03-16-agents-guide.md
docs/reports/: 2026-03-16-force-accuracy.md
include/: ewald.hpp  hpdmk.h  kernels.hpp  pswf.hpp  tree.hpp  utils.hpp
julia/: Project.toml
julia/src/: PDMK4MC.jl  cinterface.jl  molly.jl
julia/test/: cinterface.jl  runtests.jl
src/: energy_shift.cpp  ewald.cpp  force.cpp  hpdmk.cpp  pswf.cpp  tree.cpp  upward_pass.cpp
test/: ewald_test.cpp  hpdmk_test.cpp  nudft_test.cpp
